--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class='jumbotron'>
+  <h1>Spacr</h1>
+  <p>An app that corrects English text so that it contains exactly one space after a period between sentences.</p>
+  <%= link_to 'Submit your text', '#', class: 'btn btn-primary btn-lg' %>
+</div>
