--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class='jumbotron'>
-  <h1>Spacr</h1>
+  <h1><i class="fa fa-file-text" aria-hidden="true"></i> Spacr</h1>
   <p>An app that corrects English text so that it contains exactly one space after a period between sentences.</p>
   <%= link_to 'Submit your text', '#', class: 'btn btn-primary btn-lg' %>
 </div>
