--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <div class='jumbotron'>
   <h1><i class="fa fa-file-text" aria-hidden="true"></i> Spacr</h1>
   <p>An app that corrects English text so that it contains exactly one space after a period between sentences.</p>
+
 </div class='form-control'>
-<textarea class='form-control' cols="186" rows="10" required="required" name="text"></textarea>
-<%= link_to 'Submit your text', '#', class: 'btn btn-primary btn-lg btn-block'%>
+  <%= form_tag('/pages/text', id: 'text-form', remote:true) do %>
+    <%= text_area_tag :text, params[:text], :required => 'required', class: 'form-control', id: 'text-area', :rows => 10 %>
+    <%= submit_tag 'Submit your text', class: 'btn btn-primary btn-lg btn-block' %></div>
+  <% end %>
 </div>
