--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <p>An app that corrects English text so that it contains exactly one space after a period between sentences.</p>
 
 </div class='form-control'>
-  <%= form_tag('/pages/text', id: 'text-form', remote:true) do %>
+  <%= form_tag('api/v1/texts', id: 'text-form', remote:true) do %>
     <%= text_area_tag :text, params[:text], :required => 'required', class: 'form-control', id: 'text-area', :rows => 10 %>
     <%= submit_tag 'Submit your text', class: 'btn btn-primary btn-lg btn-block' %></div>
   <% end %>
