--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Spacr</a>
+      <a class="navbar-brand" href="#">1Space</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
   </div><!-- /.container-fluid -->
