--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class='jumbotron'>
-  <h1><i class="fa fa-file-text" aria-hidden="true"></i> Spacr</h1>
-  <p>An app that corrects English text so that it contains exactly one space after a period between sentences.</p>
+  <h1><i class="fa fa-file-text" aria-hidden="true"></i> 1Space</h1>
+  <p>An app that removes extra spaces from any English text.</p>
 
 </div class='form-control'>
   <%= form_tag('api/v1/texts', id: 'text-form', remote:true) do %>
